# CorridorKey

./: README.md  clip_manager.py  corridorkey_cli.py  pyproject.toml  test_vram.py
.github/workflows/: ci.yml
CorridorKeyModule/: __init__.py  inference_engine.py
CorridorKeyModule/core/: color_utils.py  model_transformer.py
backend/: frame_io.py
tests/: test_color_utils.py  test_exr_gamma_bug_condition.py  test_exr_gamma_preservation.py
